feature[TW20406]: CR - Convert other cols to BackgroundLoadingCol
Change-Id: I60911dbd270b8759bd9263e365b7d54da361f33f